--- a/css/theme-1.css
+++ b/css/theme-1.css
@@ -499,7 +499,7 @@ nav hr {
 .menu li:last-child {
   margin-right: 0px;
 }
-.menu li a {
+.menu li  {
   font-family: "Raleway", "Open Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
   font-weight: bold;
   font-size: 11px;
